CheckPoint -> Check Point

--- a/docs/releases/release_notes/5.0.md
+++ b/docs/releases/release_notes/5.0.md
@@ -60,7 +60,7 @@ TAR MD5: 0f79000974e0e5c60590e161785a1067
 
 ### Features
 
-- Checkpoint `Management Data Plane Separation (MDPS)` if enabled is now supported in IP Fabric for discovery
+- Check Point `Management Data Plane Separation (MDPS)` if enabled is now supported in IP Fabric for discovery
 
 ## v5.0.0 (Jul 19th, 2022)
 
