--- a/docs/releases/release_notes/6.1.md
+++ b/docs/releases/release_notes/6.1.md
@@ -24,7 +24,7 @@ For the list of delivered tickets, please consult the [Low-Level Release Notes f
 ### Bug Fixes
 
 - Issue of switching into FortiGate VDOM fixed
-- Speed of Checkpoint discovery optimized -- parallel load of API data enabled and duplicate requests eliminated
+- Speed of Check Point discovery optimized -- parallel load of API data enabled and duplicate requests eliminated
 - Cisco `show flow monitor` command parsing refactored to prevent an issue of a too high regular expression backtracking
 
 ## v6.1.0 (February 21st, 2023)
@@ -56,7 +56,7 @@ For the list of delivered tickets, please consult the [Low-Level Release Notes f
   - It is recommended to migrate from `roleId` to `roleName` for consistency and human readability.
 - During the upgrade, all snapshots -- including locked snapshots -- will be unloaded. Once the upgrade is completed, please load an existing snapshot, or perform a new discovery to populate network data in IP Fabric.
 - String table columns now support case insensitive regular expression operator and its negation.
-- Added a column to show if Checkpoint rules are active.
+- Added a column to show if Check Point rules are active.
 - Removed "Technology > Spanning Tree > STP Stability" table from frontend and marked API endpoint `/tables/spanning-tree/topology` deprecated.
   "STP instances" table can be used instead.
 - Clarified [password requirements and complexity checks](../../System_Administration/boot_wizard/change_osadmin_pass.md) for the `osadmin` user.
@@ -64,7 +64,7 @@ For the list of delivered tickets, please consult the [Low-Level Release Notes f
 
 ### Bug Fixes
 
-- Resolved an issue with Checkpoint rules displaying incorrect values for rule names and remarks.
+- Resolved an issue with Check Point rules displaying incorrect values for rule names and remarks.
 - Resolved an issue where entries are not being created for hosts when there is a routing table entry for the specific host address.
 - Resolved an issue where table privileges for non-admin users were not interpreted correctly in graphs. Non-admin users with table privileges are now able to see graphs correctly.
 - Resolved an issue where traffic shaper configured over 90Mbps incorrectly shows 3Mbps after reboot.
@@ -77,7 +77,7 @@ For the list of delivered tickets, please consult the [Low-Level Release Notes f
 - Brocade
   - Added support for stack.
   - Added EoL information.
-- Checkpoint -- Added support for NAT.
+- Check Point -- Added support for NAT.
 - Cisco
   - Added support for FabricPath in end-to-end path tracing.
   - Updated EoL information.
