--- a/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.3.md
+++ b/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.3.md
@@ -242,17 +242,17 @@ OVA SHA256SUM: 3d07c8f1a51497eae671a43130cbf536b7e7bdf9ae6ba9030ebc50c981328119
 - AWS - Fix mapping of `aws/_ec2/describeRouteTables`
 - AWS - Fix parsing for a command that shows tunnelOptions which can
   be empty.
-- Checkpoint Gaia - Fix parsing for Alias interfaces.
-- Checkpoint Gaia - Fix parsing for command `show cluster members interfaces all`.
-- Checkpoint Gaia - Fix parsing for empty management interface entry.
-- CheckPoint Gaia - collect only relevant SNMP configuration according
+- Check Point Gaia - Fix parsing for Alias interfaces.
+- Check Point Gaia - Fix parsing for command `show cluster members interfaces all`.
+- Check Point Gaia - Fix parsing for empty management interface entry.
+- Check Point Gaia - collect only relevant SNMP configuration according
   to agent version
-- Checkpoint Gaia - Fix parsing for command `show ospf interfaces detailed`
-- CheckPoint Gaia - fixed error when only a virtual IP was assigned on
+- Check Point Gaia - Fix parsing for command `show ospf interfaces detailed`
+- Check Point Gaia - fixed error when only a virtual IP was assigned on
   an interface
-- CheckPoint Gaia - fixed missing zone firewall policies on gateways
+- Check Point Gaia - fixed missing zone firewall policies on gateways
   with VPN tunnel interfaces
-- CheckPoint Gaia - fixed parsing of physical interfaces from command
+- Check Point Gaia - fixed parsing of physical interfaces from command
   `show cluster members interfaces all`
 - Cisco - fixed PID parsing for nonstandard Cisco transceivers from
   command `show inventory`
