--- a/docs/releases/release_notes/previous_releases/v3.x.x_ip_fabric.md
+++ b/docs/releases/release_notes/previous_releases/v3.x.x_ip_fabric.md
@@ -42,9 +42,9 @@ OVA SHA256SUM: D9D71C6BACE7FA8AC9913FDD9B6F2ACBE743AB31218C0357BB7A271D0D1E6DE6
 - Arista EOS - fixed parsing of different output for command `show ptp
   local-clock`
 - Aruba CX - Added support for Aruba OS 10.07 routing table output
-- Checkpoint Gaia - fixed API endpoint /show-gateways-and-servers
+- Check Point Gaia - fixed API endpoint /show-gateways-and-servers
   errors - VSX clusters & checkpoint host objects
-- CheckPoint Gaia - fixed parsing of bandwidth information for command
+- Check Point Gaia - fixed parsing of bandwidth information for command
   `show virtual-system all`
 - Cisco IOS - exclude OSPFv3 "authentication/confidentiality" IPsec
   tunnels.
@@ -156,7 +156,7 @@ OVA SHA256SUM: 2b208eb7584fd5b4708ea56a7f1688f4bf44624c872ef0d6b792576e88f9ff00
 ### New Vendor Support
 
 - Added support for Aruba CX
-- Added support for Checkpoint Gaia Embedded platform
+- Added support for Check Point Gaia Embedded platform
 - Added support for AWS - Discovery, inventory and routing support for
   VPC, transit gateway, VPN gateway, nat gateway
 - Added support for Versa VOS - basic discovery process
@@ -237,9 +237,9 @@ OVA SHA256SUM: 2b208eb7584fd5b4708ea56a7f1688f4bf44624c872ef0d6b792576e88f9ff00
   interface, fixed.
 - Arista EOS - Spanning tree with MLAG - PeerEthernet ports removed.
 - Avaya/Extreme VOSS - Uptime with years fix
-- CheckPoint Gaia - error about missing router ID was shown even if
+- Check Point Gaia - error about missing router ID was shown even if
   BGP was disabled
-- Checkpoint Gaia - fixed parsing of different output for command
+- Check Point Gaia - fixed parsing of different output for command
   `show cluster members interfaces all`
 - Cisco - fix parsing switchport mode dot1q-tunnel
 - Cisco - Fixed parsing show running-config command - line password
@@ -425,7 +425,7 @@ SHA256SUM: c16cbac6040e7d07d04c42142ddbb42acc0547c912d726efa1bd1138a58f5be4
 
 ### Bug Fixes
 
-- CheckPoint Gaia - fixed processing of zone firewall services
+- Check Point Gaia - fixed processing of zone firewall services
   (DCE-RPC, port ranges)
 - Cisco ACI - an unsupported show run command is no longer downloaded
 - Cisco ASA/FTD - L3 interfaces ‘local’ IPs are no longer derived from
@@ -503,11 +503,11 @@ SHA256SUM: c16cbac6040e7d07d04c42142ddbb42acc0547c912d726efa1bd1138a58f5be4
 ### Features - Protocol and technology support
 
 - Cisco ACI - add support for OSPF
-- CheckPoint Gaia - added support for VSX firewalls and switches
+- Check Point Gaia - added support for VSX firewalls and switches
 
 ### Improvements
 
-- Checkpoint Gaia - use the default Router ID for BGP if it isn’t
+- Check Point Gaia - use the default Router ID for BGP if it isn’t
   explicitly configured
 - HP Aruba - (Technology / Wireless / Radios / Radios-detail) improve
   wlans mapping when AP is in monitoring mode
@@ -523,7 +523,7 @@ SHA256SUM: c16cbac6040e7d07d04c42142ddbb42acc0547c912d726efa1bd1138a58f5be4
   disabled
 - Arista EOS - fixed parsing of different output for command `show ip
   route vrf \<vrfName>`
-- CheckPoint Gaia - fixed mapping of different output for API endpoint
+- Check Point Gaia - fixed mapping of different output for API endpoint
   "/web_api/show-gateways-and-servers"
 - Cisco ACI - fixed parsing of different output for command `show coop
   internal info ip-db`
@@ -668,11 +668,11 @@ SHA256SUM: c16cbac6040e7d07d04c42142ddbb42acc0547c912d726efa1bd1138a58f5be4
 
 - Arista - transceivers - parsing fixed and extended
 - Aruba, Palo Alto - Fixed NTP server parsing when specified by FQDN
-- Checkpoint API data wasn't download on add new devices to the
+- Check Point API data wasn't download on add new devices to the
   snapshot - fixed
-- CheckPoint Gaia - fixed parsing of different output for command
+- Check Point Gaia - fixed parsing of different output for command
   `show ospf neighbors detailed`
-- CheckPoint Gaia - run command `show security-gateway memory
+- Check Point Gaia - run command `show security-gateway memory
   statistics` (if available) instead of `fw ctl psat` which is
   deprecated
 - Cisco - IP unnumbered addresses mapped to L3 interfaces
@@ -755,7 +755,7 @@ SHA256SUM: 8a3805704b6f4b126d960e3953749f936c67e635d94d387d86ddea6ecf4ea8fc
   - Gateways (`/technology/security/ipsec/gateways`)
 - Adds Zone-Based Firewall support for the following platforms
   - Palo Alto
-  - Checkpoint Gaia
+  - Check Point Gaia
 - Adds Transceiver support for the following platforms
   - WARNING: Transceiver information collection is intentionally
     disabled by default due to frequent bugs associated with reading
@@ -860,8 +860,8 @@ SHA256SUM: 8a3805704b6f4b126d960e3953749f936c67e635d94d387d86ddea6ecf4ea8fc
 - Arista - fixed parsing of different output for command `show lldp
   neighbors detail`
 - Arista - fixed parsing of different output for command `show vrf`
-- CheckPoint Gaia - add cluster virtual IP addresses to the interfaces
-- CheckPoint Gaia - fixed parsing of different output for command
+- Check Point Gaia - add cluster virtual IP addresses to the interfaces
+- Check Point Gaia - fixed parsing of different output for command
   `show ospf neighbors detailed`
 - Cisco 9800 WLC - Fix parsing when wireless client with "excluded"
   status is contained in output
@@ -1659,7 +1659,7 @@ Hyper-V SHA256SUM: 29E185591D87B327B50D791F8916C6FC08C399984C5AE392902E9EF6418
   ap wlan 802.11b \<apName>`
 - Cisco WLC Air - fixed parsing of different output for command `show
   lag summary`
-- Checkpoint Gaia - fixed parsing of different output for command `show
+- Check Point Gaia - fixed parsing of different output for command `show
   ospf interfaces detailed`
 - Extreme XOS - fixed mapping for L2 interfaces
 - Extreme XOS - fixed parsing of different output for command `show
@@ -1706,7 +1706,7 @@ Hyper-V SHA256SUM: 29E185591D87B327B50D791F8916C6FC08C399984C5AE392902E9EF6418
   to support long names of VRF
 - Huawei VRP - `display device` and `display device manufacture-info`
   parsing fixed and extended to better support modular chassis
-- Checkpoint Gaia - improved OS version detection, support for new
+- Check Point Gaia - improved OS version detection, support for new
   versions outputs.
 - Mikrotik RouterOS - fixed command to get bridge hosts table
 - Juniper JunOS - fixed parsing of different output for command `show
@@ -2470,9 +2470,9 @@ unloaded and loaded again.
   run-config` commands
 - Cisco - fixed parsing of different output for command `show snmp
   user`
-- Checkpoint GAIA - fixed parsing of different output for command `show
+- Check Point Gaia - fixed parsing of different output for command `show
   ospf neighbors detailed`
-- Checkpoint GAIA - fixed parsing of different output for command `fw
+- Check Point Gaia - fixed parsing of different output for command `fw
   ctl pstat`
 - Juniper - Corrected BGP neighbor uptime if the uptime is less than
   60 minutes
@@ -2823,7 +2823,7 @@ SHA256SUM: 138b25ae8b4b1b1f29b6e01a2e15d619a0eddfd610fcbaa042a22a9a8b80f0e0
   bss-table`
 - HP Comware - fixed parsing of different output for command `display
   ip interface`
-- Checkpoint Gaia - fixed parsing of different output for command
+- Check Point Gaia - fixed parsing of different output for command
   `show ospf neighbors detailed`
 - HP ArubaSW - fixed parsing of different output for command `show
   spanning-tree debug-counters instance \<mstpInstanceId> ports all`
@@ -2903,7 +2903,7 @@ SHA256SUM: 138b25ae8b4b1b1f29b6e01a2e15d619a0eddfd610fcbaa042a22a9a8b80f0e0
   route active-path`
 - Fixed RIB edges with duplicate GLBP addresses for devices without
   ARP table (AP) or without
-- Checkpoint Gaia - fixed parsing of different output for command
+- Check Point Gaia - fixed parsing of different output for command
   `show ospf interfaces detailed`
 - Cisco ASA - fixed parsing of different output for command `show bgp
   summary`
@@ -2954,7 +2954,7 @@ SHA256SUM: 138b25ae8b4b1b1f29b6e01a2e15d619a0eddfd610fcbaa042a22a9a8b80f0e0
 
 #### Features - Protocol and technology support
 
-- Added BGP support for Checkpoint Gaia, Cisco ASA, Extreme XOS,
+- Added BGP support for Check Point Gaia, Cisco ASA, Extreme XOS,
   Fortinet FortiGate, F5 Big-IP, Huawei VRP, Palo Alto
 - Added ISIS support for Arista EOS, Cisco IOS / IOS-XE / IOS-XR,
   Extreme XOS, HP Comware, Huawei VRP
