--- a/docs/releases/release_notes_low-level/4.x/4.3.x/4.3.0.md
+++ b/docs/releases/release_notes_low-level/4.x/4.3.x/4.3.0.md
@@ -33,7 +33,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-5345` -- Medium -- StormControl States are displaying the state twice
 - `NIM-5364` -- Low -- Transceivers Stats - DeltaValueLow exceptions
 - `NIM-5463` -- Low -- UX: Intent check vs applied report
-- `NIM-5490` -- Medium -- Checkpoint rules not being parsed correctly
+- `NIM-5490` -- Medium -- Check Point rules not being parsed correctly
 - `NIM-5510` -- High -- Versa router appears to be a server (default icon wanted)
 - `NIM-5576` -- Low -- Transceivers cmds on FortiGate likely don't work on VDOM enabled firewalls
 - `NIM-5599` -- Medium -- Add warning into CSR page that new CSR invalidates old certificates
@@ -128,7 +128,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-6927` -- Highest -- The font size is too low now
 - `NIM-6929` -- Medium -- Bugfix: commands/cisco/showInterfaces
 - `NIM-6931` -- Medium -- Command line detection of F5 in cluster
-- `NIM-6932` -- Highest -- CheckPoint firewall rules collection and validation
+- `NIM-6932` -- Highest -- Check Point firewall rules collection and validation
 - `NIM-6933` -- High -- Align the form component design with last design of buttons
 - `NIM-6937` -- High -- Fortinet - Interfaces have no mac address
 - `NIM-6939` -- Medium -- Bugfix: commands/cisco/_viptela/v1/bfdSessions
@@ -276,7 +276,7 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-6750` -- Medium -- Update Font Awesome to v5
 - `NIM-6761` -- Highest -- UI Switch component: disabled state vs selected option
 - `NIM-6764` -- Medium -- OUI - enable brocade in nimpeeMigrate
-- `NIM-6783` -- Medium -- CheckPoint - collect static ARP
+- `NIM-6783` -- Medium -- Check Point - collect static ARP
 - `NIM-6797` -- Medium -- Enable API Debugging
 - `NIM-6798` -- Medium -- UI for enabling/disabling packet coloring for detected path lookup loops
 - `NIM-6812` -- Medium -- API client for vmware NSX
