--- a/docs/releases/release_notes_low-level/4.x/4.4.x/4.4.0.md
+++ b/docs/releases/release_notes_low-level/4.x/4.4.x/4.4.0.md
@@ -44,7 +44,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-7398` -- Medium -- PaloAlto in globalVsys aad IPsec task
 - `NIM-7406` -- Medium -- The locked snapshot can be modified
 - `NIM-7417` -- Medium -- [API refactoring] SnapshotloadJob fail
-- `NIM-7422` -- High -- No FW rules for Checkpoint devices
+- `NIM-7422` -- High -- No FW rules for Check Point devices
 - `NIM-7426` -- Medium -- [API refactoring] CleanDBJob fail
 - `NIM-7429` -- Medium -- Bad hostname detection on Brocade switch
 - `NIM-7432` -- High -- Multicast source table - link to pathlookup is broken
