--- a/docs/releases/release_notes_low-level/5.x/5.0.x/5.0.0.md
+++ b/docs/releases/release_notes_low-level/5.x/5.0.x/5.0.0.md
@@ -176,7 +176,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-8287` -- High -- RoutingTable eCef.prefixList ipv6 validation problem
 - `NIM-8288` -- Highest -- Jquery is missing in webng production build
 - `NIM-8289` -- Medium -- Bugfix: commands/cisco/_wlcIosxe/apName/ethernetStatistics
-- `NIM-8290` -- Medium -- Checkpoint Gaia - uptime parsing fix
+- `NIM-8290` -- Medium -- Check Point Gaia - uptime parsing fix
 - `NIM-8294` -- Highest -- Remove API version dependency from reports
 - `NIM-8301` -- Medium -- Bugfix: commands/cisco/mcast/pimRp
 - `NIM-8303` -- Highest -- API not found after 5.0.0 installation
@@ -289,7 +289,7 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-2361` -- Medium -- Deleting a report leaves forever unused data in the DB
 - `NIM-2371` -- Highest -- Tunnels table
 - `NIM-2418` -- High -- Cisco, Juniper - RSVP
-- `NIM-2917` -- Medium -- Add interface alias on ASA (possibly on Checkpoint)
+- `NIM-2917` -- Medium -- Add interface alias on ASA (possibly on Check Point)
 - `NIM-3121` -- High -- Add devType column into Inventory / devices
 - `NIM-4306` -- Highest -- Meraki - API change v0 to v1 (Deadline 2022-08-05)
 - `NIM-4916` -- High -- Cisco ACI - contracts, tenants, applications, zone filtering
@@ -341,7 +341,7 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-7541` -- High -- spanning-tree/inconsistencies/stp-cdp-ports-mismatch - incorrect column name
 - `NIM-7543` -- Medium -- E2E test: security rules – vxlan header selectors
 - `NIM-7544` -- Medium -- E2E test: security rules – discontinuous masks
-- `NIM-7549` -- High -- E2E not reading regions correctly on Checkpoints
+- `NIM-7549` -- High -- E2E not reading regions correctly on Check Point
 - `NIM-7562` -- High -- RBAC Phase 1 wireframing UX
 - `NIM-7565` -- Medium -- Add stp root ID to VLAN L3 gateway
 - `NIM-7569` -- High -- Removed unused code from snapshots
@@ -473,7 +473,7 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-8191` -- Medium -- Extreme EoL update for 5.0.0
 - `NIM-8192` -- Medium -- Modify Check Point inventory - pid for HW appliances
 - `NIM-8198` -- Medium -- Save data for new task APIC
-- `NIM-8200` -- Medium -- Checkpoint EoL dates for 5.0.0
+- `NIM-8200` -- Medium -- Check Point EoL dates for 5.0.0
 - `NIM-8216` -- Highest -- pushFhrpToIpList function in tasks/l3Interfaces/helpers.js is failing
 - `NIM-8217` -- Highest -- Extreme EXOS - missing mgmt port
 - `NIM-8218` -- High -- Remove truncateRbacCollections from migrate in final release
@@ -511,7 +511,7 @@ Task may be associated into Epics or Stories to form complex features.
 
 Sub-tasks are very well contained work packages, organized under Tasks.
 
-- `NIM-3923` -- Medium -- tasks/zoneFw - CheckPoint wildcard objects support
+- `NIM-3923` -- Medium -- tasks/zoneFw - Check Point wildcard objects support
 - `NIM-6394` -- Medium -- Extreme ACL support
 - `NIM-7192` -- Medium -- Map bdVnid to vni in path lookup inspector
 - `NIM-7235` -- High -- Cisco APIC discovery + new task with tenants
@@ -523,7 +523,7 @@ Sub-tasks are very well contained work packages, organized under Tasks.
 - `NIM-7691` -- High -- [WEBNG] Show OID original in Gui
 - `NIM-7719` -- Medium -- User action structured logs
 - `NIM-7723` -- High -- DHCP + IP Helpers model
-- `NIM-7726` -- Medium -- Checkpoint - add l3Interface.tunnel property
+- `NIM-7726` -- Medium -- Check Point - add l3Interface.tunnel property
 - `NIM-7727` -- Medium -- Fortigate - add l3Interface.tunnel property
 - `NIM-7732` -- High -- HP Aruba and ArubaCX - add l3Interface.tunnel property
 - `NIM-7756` -- High -- Add DNS resolver support for comware/3com families
