--- a/docs/releases/release_notes_low-level/6.x/6.0.x/6.0.0.md
+++ b/docs/releases/release_notes_low-level/6.x/6.0.x/6.0.0.md
@@ -496,7 +496,7 @@ Sub-tasks are very well contained work packages, organized under Tasks.
 - `NIM-7971` -- Medium -- Implement ArrayObjectFilter
 - `NIM-8069` -- Medium -- Silverpeak
 - `NIM-8434` -- High -- Cisco ACI E2E - swap groupPolicyId
-- `NIM-8456` -- High -- Checkpoint - Rule Number appears when Rule Name is empty
+- `NIM-8456` -- High -- Check Point - Rule Number appears when Rule Name is empty
 - `NIM-8543` -- High -- Take E2E CIDR settings from utils in webng
 - `NIM-8634` -- Medium -- IPv4 - fix model for bgp
 - `NIM-8635` -- Medium -- Route Maps - Cisco implementation
@@ -529,7 +529,7 @@ Sub-tasks are very well contained work packages, organized under Tasks.
 - `NIM-8792` -- Medium -- AWS - hostname & domain handling
 - `NIM-8793` -- Medium -- Azure - hostname & domain handling
 - `NIM-8794` -- Medium -- Brocade - hostname & domain handling
-- `NIM-8795` -- Medium -- Checkpoint - hostname & domain handling
+- `NIM-8795` -- Medium -- Check Point - hostname & domain handling
 - `NIM-8796` -- Medium -- Cisco - hostname & domain handling
 - `NIM-8797` -- Medium -- Dell - hostname & domain handling
 - `NIM-8798` -- Medium -- Extreme - hostname & domain handling
@@ -554,7 +554,7 @@ Sub-tasks are very well contained work packages, organized under Tasks.
 - `NIM-8897` -- High -- IPv4 type standardization - Palo Alto
 - `NIM-8898` -- High -- IPv4 type standardization - Fortinet
 - `NIM-8899` -- High -- IPv4 type standardization - Juniper
-- `NIM-8900` -- High -- IPv4 type standardization - Checkpoint
+- `NIM-8900` -- High -- IPv4 type standardization - Check Point
 - `NIM-8910` -- High -- PBR - Cisco IOS/IOS-XE/NX-OS
 - `NIM-8952` -- Medium -- Tasks/bgb - add route-maps
 - `NIM-8978` -- Medium -- Fix documentation and cmd default return
