--- a/docs/releases/release_notes_low-level/6.x/6.1.x/6.1.1.md
+++ b/docs/releases/release_notes_low-level/6.x/6.1.x/6.1.1.md
@@ -11,7 +11,7 @@ These are low-level release notes for IP Fabric release `6.1.1`. Please note, th
 Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
 
 - `NIM-10492` -- High -- Fix issue of switching into FortiGate VDOM
-- `NIM-10501` -- High -- Improve speed of Checkpoint API discovery - eliminate duplicate queries and enable parallel load
+- `NIM-10501` -- High -- Improve speed of Check Point API discovery - eliminate duplicate queries and enable parallel load
 - `DOS-988` -- High -- Update git from 2.30.2 to remediate CVEs
 - `DOS-989` -- High -- Update libksba from 1.5.0 to remediate CVEs
 - `DOS-990` -- High -- Update sudo from 1.9.5 to remediate CVEs
