--- a/docs/releases/release_notes_low-level/6.x/6.2.x/6.2.0.md
+++ b/docs/releases/release_notes_low-level/6.x/6.2.x/6.2.0.md
@@ -54,7 +54,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-10506` -- Medium -- Incorrect count of FEX edges in graphs
 - `NIM-10512` -- Medium -- Bugfix: commands/hp/_comware/transceiver/manuinfoInterface (6.0.0-24)
 - `NIM-10520` -- Medium -- Bugfix: commands/cisco/_apic/fabricNode (6.1.0-17)
-- `NIM-10521` -- Medium -- Multiple CheckPoint controllers are not running in parallel
+- `NIM-10521` -- Medium -- Multiple Check Point controllers are not running in parallel
 - `NIM-10522` -- Medium -- Bugfix: commands/frr/bgp/neighbors (6.1.0-17)
 - `NIM-10523` -- Medium -- Bugfix: commands/cisco/ipv6RoutingTable (6.1.0-17)
 - `NIM-10538` -- Medium -- Azure VNetGw - different behaviour between IPF 6.0 and IPF 6.1
@@ -103,7 +103,7 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-9658` -- High -- Add support for transceivers statistics on Cisco IOS-XR
 - `NIM-9671` -- High -- Implement Prisma additional management tasks
 - `NIM-9688` -- Low -- FortiGate - don't run HW only commands on VM platform
-- `NIM-9713` -- Medium -- Fix docs for Checkpoint configSaved task
+- `NIM-9713` -- Medium -- Fix docs for Check Point configSaved task
 - `NIM-9908` -- Medium -- Support for manual NAT rules in E2E
 - `NIM-10238` -- Medium -- Create missing eCef edges for IP nexthops from PBR policy
 - `NIM-10268` -- Medium -- License support for Palo Alto devices
