--- a/docs/releases/release_notes_low-level/6.x/6.3.x/6.3.0.md
+++ b/docs/releases/release_notes_low-level/6.x/6.3.x/6.3.0.md
@@ -50,7 +50,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-9942` -- Medium -- Bugfix: commands/fortinet/_fortigate/diagnoseFirewall/authList (5.0.2+5)
 - `NIM-9986` -- Medium -- Bugfix: commands/extreme/_voss/spbm (6.1.0-2)
 - `NIM-10018` -- Medium -- Missing API data for rediscovery of hybrid discovery devices
-- `NIM-10031` -- High -- Checkpoint - `show asset all` timing out
+- `NIM-10031` -- High -- Check Point - `show asset all` timing out
 - `NIM-10035` -- High -- Tabs in discovery snapshot glitches
 - `NIM-10050` -- High -- Expand EULA to fullscreen
 - `NIM-10086` -- Medium -- Path lookup changes after stp port to port-channel link fix
@@ -70,7 +70,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-10235` -- Medium -- Broken Filter in Path Verification table
 - `NIM-10248` -- Medium -- Resume snapshot retention job
 - `NIM-10257` -- High -- Policy endpoints have wrong webPath
-- `NIM-10294` -- High -- Checkpoint - `showObjects mapping failure`
+- `NIM-10294` -- High -- Check Point - `showObjects mapping failure`
 - `NIM-10308` -- High -- Can't enable debug log level for the nimpee-api service
 - `NIM-10314` -- Medium -- Auto sizing table does not work as expected in path verifications
 - `NIM-10329` -- Highest -- Missing attribute groups in websocket event for intent rule editor
@@ -119,7 +119,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-10660` -- Medium -- Loading data of IPv6 to intent rule editor doesn't work
 - `NIM-10684` -- Medium -- Juniper - fqdn and domain not parsed from JunOS
 - `NIM-10690` -- Medium -- E2E path-lookup doesn't work on multiple ports on Palo Alto
-- `NIM-10696` -- Medium -- CheckPoint NAT - wrong object lookup
+- `NIM-10696` -- Medium -- Check Point NAT - wrong object lookup
 - `NIM-10697` -- Medium -- Bugfix: tasks/nat44 (6.1.0-17)
 - `NIM-10712` -- Medium -- Column auto size wrongly respects padding in Firefox
 - `NIM-10726` -- Highest -- Fix column formats in csv
@@ -184,7 +184,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-11024` -- High -- Inconsistent Frontend Column Names
 - `NIM-11037` -- High -- After changing username in Okta, user could not log into IP Fabric via Okta SSO
 - `NIM-11041` -- Medium -- Fix failing test in main branch
-- `NIM-11047` -- Medium -- Checkpoint incorrect parsing of source in a rule
+- `NIM-11047` -- Medium -- Check Point incorrect parsing of source in a rule
 - `NIM-11049` -- High -- Discovery - unstable rabbit (rabbitmq) connection
 - `NIM-11052` -- Low -- Check Point - don't report error on Gaia without firewall-1 module
 - `NIM-11057` -- Medium -- Alcatel - Topology/RIB - Protocol local creates a RIB loop in topology
@@ -471,10 +471,10 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-11022` -- High -- Update version constants to 6.3.0
 - `NIM-11028` -- Highest -- Remove max number of rows returned in API call
 - `NIM-11031` -- High -- Fix "Cannot create table endpoint" warning when starting API
-- `NIM-11033` -- Low -- Checkpoint helpers - cleanup
+- `NIM-11033` -- Low -- Check Point helpers - cleanup
 - `NIM-11050` -- Medium -- OAS tables only
 - `NIM-11051` -- Medium -- Add validations to intent rule form
-- `NIM-11054` -- High -- Checkpoint incorrect FW mapping with cluster
+- `NIM-11054` -- High -- Check Point incorrect FW mapping with cluster
 - `NIM-11055` -- Medium -- OAS CI validations (monorepo)
 - `NIM-11058` -- Medium -- Add stylelint to lint script
 - `NIM-11061` -- High -- Improve readability in path inspector
@@ -610,5 +610,5 @@ Sub-tasks are very well contained work packages, organized under Tasks.
 - `NIM-11263` -- Medium -- Juniper Junos - Check config to prevent sending unneeded routing-instance specific commands for BGP, OSPF, IS-IS and RSVP and MPLS LDP
 - `NIM-11275` -- Medium -- Update documentation of Discovery configuration with maxServiceRestarts
 - `NIM-11340` -- Medium -- Monitor if the Worker event-loop isn't blocked
-- `NIM-11366` -- Medium -- Checkpoint cluster Mapping issue - investigate 6.3.0-beta
-- `NIM-11470` -- High -- Checkpoint cluster Mapping issue - 6.3.0+1353
+- `NIM-11366` -- Medium -- Check Point cluster Mapping issue - investigate 6.3.0-beta
+- `NIM-11470` -- High -- Check Point cluster Mapping issue - 6.3.0+1353
