--- a/docs/releases/release_notes/6.3.md
+++ b/docs/releases/release_notes/6.3.md
@@ -206,6 +206,6 @@ The following table shows how the items in the old menu map to those in the new 
 ### Known issues
 - Tasker does not follow restart stop limit
   - ID `NIM-12058`
-  - Root cause: Tasker service does not follow limit of 3 restarts: If during the hybrid Vendor API discovery (APIC, FTD, Checkpoint, etc.) `tasker` process encounters an issue, it is restarted and discovery is started anew. This can lead to infinite discovery and filling the system disk with logs.
+  - Root cause: Tasker service does not follow limit of 3 restarts: If during the hybrid Vendor API discovery (APIC, FTD, Check Point, etc.) `tasker` process encounters an issue, it is restarted and discovery is started anew. This can lead to infinite discovery and filling the system disk with logs.
   - Workaround: no workaround
   - Affected versions: 6.2.0
