--- a/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.0.md
+++ b/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.0.md
@@ -14,7 +14,7 @@ OVA SHA256SUM: 045123c5ccfeeb0f89eb1af8fb6a1dd3de1d91a109f0024a281da2d788db6c40
 ### Features - Protocol and technology support
 
 - Arista - added ACL support
-- CheckPoint Gaia - added VRRP support
+- Check Point Gaia - added VRRP support
 - Cisco - AAA - new local users table added, located at Technology /
   Management / AAA / Local users
 - Cisco IOS-XR - added ACL support
@@ -81,7 +81,7 @@ OVA SHA256SUM: 045123c5ccfeeb0f89eb1af8fb6a1dd3de1d91a109f0024a281da2d788db6c40
 - Cisco ASA/FTD - added support for `show DNS` command and use it for
   translation of FQDNs in objects/ACLs
 - Cisco WLC IOS-XE - Added parsing of wireless client IP address.
-- CheckPoint Gaia - added support for Link Aggregation (Bond
+- Check Point Gaia - added support for Link Aggregation (Bond
   interfaces)
 - Allow to use `-` or `.` characters in username
 - Device type classification for a router with unused switch module
@@ -138,17 +138,17 @@ OVA SHA256SUM: 045123c5ccfeeb0f89eb1af8fb6a1dd3de1d91a109f0024a281da2d788db6c40
 - Aruba CX - `commands/arubacx/interface` - fixed parsing for ip address
   / mask
 - Aruba switch - standardize port speed units with other vendors
-- Checkpoint Gaia -
+- Check Point Gaia -
   `commands/checkpoint/_gaia/cluster/members/interfacesAll` - fixed
   parsing for different command output
-- CheckPoint Gaia - fixed collecting of nested network / service
+- Check Point Gaia - fixed collecting of nested network / service
   groups in security policies
-- CheckPoint Gaia - fixed discovery on devices where the command `show management interface` is not available
-- CheckPoint Gaia - fixed parsing of different output for command
+- Check Point Gaia - fixed discovery on devices where the command `show management interface` is not available
+- Check Point Gaia - fixed parsing of different output for command
   `show cluster members interfaces all`
-- CheckPoint Gaia - fixed parsing of OSPF InterArea and External
+- Check Point Gaia - fixed parsing of OSPF InterArea and External
   routes
-- CheckPoint Gaia (Security Management) - don’t download policy
+- Check Point Gaia (Security Management) - don’t download policy
   packages without configured installation target
 - Cisco - fix error created by calling ambiguous command (`show interface switchport`, `show interface status err-disabled`, `show ip interface`, `show spanning-tree bpdu`)
 - Cisco - fixed ambiguous command `sh mpl interf` by `show mpls interfaces`
