--- a/docs/releases/release_notes_low-level/6.x/6.1.x/6.1.0.md
+++ b/docs/releases/release_notes_low-level/6.x/6.1.x/6.1.0.md
@@ -40,7 +40,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-7644` -- Medium -- Submitting LDAP form cannot leave page
 - `NIM-8087` -- Medium -- Cisco cutting XDP neighbor if long hostname is present
 - `NIM-8354` -- High -- Pathlookup - Incorrectly evaluated L3 regression on Comware
-- `NIM-8453` -- High -- CheckPoint - Remove section policies & remarks from security policy table
+- `NIM-8453` -- High -- Check Point - Remove section policies & remarks from security policy table
 - `NIM-8512` -- High -- Same PN for different vendors gets EoL colored
 - `NIM-8650` -- Medium -- AWS - VPC Endpoints
 - `NIM-8698` -- Medium -- Cisco Viptela - missing seconday IP
@@ -103,7 +103,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-9603` -- Medium -- Bugfix: commands/vmware/_nsx-t/ipSets (6.0.0-24)
 - `NIM-9605` -- Medium -- Left menu not fully scrollable
 - `NIM-9606` -- Medium -- Different snapshot selected
-- `NIM-9609` -- High -- Checkpoint - Missing destination servers in ZoneFW policy
+- `NIM-9609` -- High -- Check Point - Missing destination servers in ZoneFW policy
 - `NIM-9611` -- Medium -- Bugfix: commands/vmware/_nsx-t/effectiveIPAddressMembers (6.0.0-24)
 - `NIM-9622` -- Highest -- UI is broken when discovery is running
 - `NIM-9624` -- High -- Editing Local Attributes are not Saved
@@ -223,7 +223,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-10062` -- Medium -- NAT - Decision table does not contain information about NAT evaluation in case of no match
 - `NIM-10069` -- Highest -- QA: Forcepoint implementation doesn't work
 - `NIM-10072` -- High -- No permissions after Clear DB even when logged-in as admin
-- `NIM-10075` -- Medium -- Checkpoint BGP Uptime Parsing Error
+- `NIM-10075` -- Medium -- Check Point BGP Uptime Parsing Error
 - `NIM-10080` -- Highest -- Inconsistent behaviour between tables and graphs for users with Role without AttributePolicy
 - `NIM-10088` -- Medium -- DHCP relay information from vManage
 - `NIM-10098` -- Medium -- License collection for Cisco ASR-9K
@@ -255,7 +255,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-10192` -- Medium -- FabricPath release notes (Noticeable changes)
 - `NIM-10198` -- Medium -- Discovery services restarted during discovery - SEGV + issues with connection to MQ
 - `NIM-10199` -- Medium -- Bugfix: tasks/routingTable (6.0.0-24)
-- `NIM-10209` -- Medium -- Checkpoint missing BGP routes
+- `NIM-10209` -- Medium -- Check Point missing BGP routes
 - `NIM-10217` -- Medium -- STP Domain handling during E2E
 - `NIM-10219` -- Medium -- Bugfix: commands/arista/_eos/ntp (6.0.0-24)
 - `NIM-10220` -- Medium -- Bugfix: commands/arista/_eos/ipOspf/interface (6.0.0-24)
@@ -307,7 +307,7 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-8233` -- Medium -- Implement Intent Rules management for new Table
 - `NIM-8274` -- Medium -- Update webng to Webpack 5
 - `NIM-8409` -- Medium -- Proccessing optimalization of multi-context devices
-- `NIM-8455` -- High -- CheckPoint - Disabled policies appear with enabled policies
+- `NIM-8455` -- High -- Check Point - Disabled policies appear with enabled policies
 - `NIM-8563` -- Medium -- Cisco FabricPath pathlookup
 - `NIM-8596` -- Medium -- Vendor API client tests: Azure
 - `NIM-8597` -- Medium -- Vendor API client tests: Check Point
@@ -316,7 +316,7 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-8604` -- Medium -- Vendor API client tests: Silver Peak
 - `NIM-8679` -- Medium -- Add uid to zone firewall policies table
 - `NIM-8752` -- Medium -- PBR - HP Comware
-- `NIM-8769` -- High -- NAT - Checkpoint
+- `NIM-8769` -- High -- NAT - Check Point
 - `NIM-8822` -- Medium -- IPv4 - fix model for l3interface
 - `NIM-8823` -- Medium -- IPv4 - fix model for mcast
 - `NIM-8829` -- Medium -- IPv4 - fix model for pppoe
@@ -356,7 +356,7 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-9354` -- Medium -- Allow opt-out from typechecking or linting
 - `NIM-9357` -- Medium -- Add snapshot name and timestamp into failed job results
 - `NIM-9360` -- Medium -- Import Brocade and Ruckus EoL Information
-- `NIM-9368` -- Medium -- CheckPoint vendor API client refactorization
+- `NIM-9368` -- Medium -- Check Point vendor API client refactorization
 - `NIM-9370` -- Medium -- FT - Case insensitive regex
 - `NIM-9386` -- Medium -- technology/load-balancing/virtual-server pool members - add column "vrf"
 - `NIM-9389` -- Medium -- Run yaml lint in pipeline
