--- a/docs/releases/release_notes/6.4.md
+++ b/docs/releases/release_notes/6.4.md
@@ -33,7 +33,11 @@ SHA256 (ipfabric-6-4-3+2.ova) = b81d3829de02ee7e79f91a83b16e94b9bd93a619141552d5
 MD5 (ipfabric-6-4-3+2.ova) = a8e6c92f419933e5a248632b51269902
 ```
 
+For the list of delivered tickets, please consult the [Low-Level Release Notes for 6.4.3](../release_notes_low-level/6.x/6.4.x/6.4.3.md).
+
 ## v6.4.2
+
+For the list of delivered tickets, please consult the [Low-Level Release Notes for 6.4.2](../release_notes_low-level/6.x/6.4.x/6.4.2.md).
 
 ### Experimental Features
 
@@ -49,6 +53,8 @@ you have duplicate IP addresses in the network, then it can be worthy to
 whitelist some subnets.
 
 ## v6.4.1
+
+For the list of delivered tickets, please consult the [Low-Level Release Notes for 6.4.1](../release_notes_low-level/6.x/6.4.x/6.4.1.md).
 
 ### Bug Fixes
 
@@ -69,6 +75,8 @@ MD5 (ipfabric-6-4-0+2.qcow2) = 4088907421e099f5dee774d4fcdbd5fc
 SHA256 (ipfabric-6-4-0+2.ova) = 95a3e8224dbef7749cace5ead1f1eca6a1c199d8f4e25bef2df9bd3a21362b95
 MD5 (ipfabric-6-4-0+2.ova) = dc05c9c7c76013cfa8e308e9e380915b
 ```
+
+For the list of delivered tickets, please consult the [Low-Level Release Notes for 6.4.0](../release_notes_low-level/6.x/6.4.x/6.4.0.md).
 
 ### GUI
 
