NIM-9829 Mention E2E path lookup support for F5 in 6.5 RN

--- a/docs/releases/release_notes/6.5.md
+++ b/docs/releases/release_notes/6.5.md
@@ -36,6 +36,9 @@ tags: ["draft"]
     NAT feature is not finished yet. Only VPC, cloud routers, subnets, routes,
     and instances are discovered. Might be problematic in E2E discovery. To
     enable it, please contact IP Fabric Support.
+- F5 Big-IP
+  - End-to-End Path Lookup support was added for F5. Now you can see paths after
+    load-balancing action to exact pool members.
 
 ### Other minor changes
 
