ST-238 Vendors API - Mention 'advanced settings', update screenshots

--- a/docs/releases/release_notes/6.5.md
+++ b/docs/releases/release_notes/6.5.md
@@ -36,9 +36,13 @@ tags: ["draft"]
     NAT feature is not finished yet. Only VPC, cloud routers, subnets, routes,
     and instances are discovered. Might be problematic in E2E discovery. To
     enable it, please contact IP Fabric Support.
-- F5 Big-IP
+- F5 BIG-IP
   - End-to-End Path Lookup support was added for F5. Now you can see paths after
     load-balancing action to exact pool members.
+- Advanced settings for Vendor APIs
+  - It is now possible to fine-tune maximum concurrent requests, `maxCapacity`,
+    and `refillRate` for each Vendor API. For more details, see
+    [Vendors API - Advanced settings](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API.md#advanced-settings).
 
 ### Other minor changes
 
