--- a/docs/releases/release_notes/6.5.md
+++ b/docs/releases/release_notes/6.5.md
@@ -12,6 +12,12 @@ tags: ["draft"]
 
 ## v6.5.0 (UNRELEASED)
 
+### Important product changes
+
+#### Forcing `DEFAULT@SECLEVEL=0`
+
+All secure (read encrypted with OpenSSL) connections made by IP Fabric has forced `DEFAULT@SECLEVEL=0` to allow connections to devices with older OpenSSL versions (which leads to use of, now considered, weak ciphers). This is a temporary solution and will be removed in the future. We are working on solution to allow OpenSSL being configured by the user from the outside of the `node.js` process.
+
 ### Network Discovery
 
 - Check Point Gaia
