ST-243 Describe techsupport data handling; improve 'Techsupport' page

--- a/docs/releases/release_notes/6.5.md
+++ b/docs/releases/release_notes/6.5.md
@@ -16,7 +16,12 @@ tags: ["draft"]
 
 #### Forcing `DEFAULT@SECLEVEL=0`
 
-All secure (read encrypted with OpenSSL) connections made by IP Fabric has forced `DEFAULT@SECLEVEL=0` to allow connections to devices with older OpenSSL versions (which leads to use of, now considered, weak ciphers). This is a temporary solution and will be removed in the future. We are working on solution to allow OpenSSL being configured by the user from the outside of the `node.js` process.
+All secure (read "encrypted with OpenSSL") connections made by IP Fabric have
+forced `DEFAULT@SECLEVEL=0` to allow connections to devices with older OpenSSL
+versions (which leads to the use of ciphers that are now considered weak). This
+is just a temporary solution and will be removed in the future. We are working
+on a solution to allow OpenSSL being configured by the user from the outside of
+the `node.js` process.
 
 ### Network Discovery
 
