NAE/NIM-12149_pa_dhcp_support update RL for Palo Alto pan-os DHCP server

--- a/docs/releases/release_notes/6.6.md
+++ b/docs/releases/release_notes/6.6.md
@@ -16,5 +16,5 @@ tags: ["draft"]
 
 - Palo Alto
   - PAN-OS -- Added support for
-    [IP wildcard](https://docs.paloaltonetworks.com/pan-os/9-1/pan-os-admin/policy/policy-objects)
-    object in Zone Firewall.
+    - [IP wildcard](https://docs.paloaltonetworks.com/pan-os/9-1/pan-os-admin/policy/policy-objects) object in Zone Firewall.
+    - [DHCP server](https://docs.paloaltonetworks.com/pan-os/9-1/pan-os-web-interface-help/network/network-dhcp/dhcp-server).
