--- a/docs/releases/release_notes_low-level/6.x/6.4.x/6.4.0.md
+++ b/docs/releases/release_notes_low-level/6.x/6.4.x/6.4.0.md
@@ -42,7 +42,6 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-11338` -- Medium -- Bugfix: commands/paloalto/_panos/showHighAvailabilityState (6.2.2-1)
 - `NIM-11353` -- Medium -- Bugfix: commands/cisco/showRun (6.2.2-1)
 - `NIM-11376` -- High -- Inconsistent name of IS-IS protocol
-- `NIM-11439` -- Medium -- jupee errors fixing - tasks/_helpers/security/preProcess - "natRules.ruleChains" must contain at least 1 items
 - `NIM-11448` -- High -- Safari - Logout is called immediately after login in specific conditions
 - `NIM-11459` -- Medium -- Leave dialog is invoked on snapshot settings leave
 - `NIM-11469` -- Medium -- Check all states of HA PA states
@@ -113,6 +112,7 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-10883` -- Medium -- NAT interface configuration error when using ICMP
 - `NIM-10902` -- High -- GPL dependency is-localhost-ip
 - `NIM-10983` -- High -- Add note to stopped snapshots when workers fail
+- `NIM-11246` -- High -- Cisco APIC Service Graph - inventory, data collection, L3 PBR support
 - `NIM-11466` -- High -- Implement proper keyboard interaction for select
 - `NIM-11985` -- Medium -- Show helpful error when two route transition blockers are initialized at once
 - `NIM-12002` -- High -- path-lookup tests broken in main branch (by devGroup fix)
