--- a/docs/releases/release_notes/6.5.md
+++ b/docs/releases/release_notes/6.5.md
@@ -4,6 +4,32 @@ description: In this section, you can find the release notes for v6.5 releases.
 
 # IP Fabric v6.5
 
+--8<-- "snippets/upgrade_version_policy.md"
+
+--8<-- "snippets/clear_browser_cache.md"
+
+### Upgrade Notices
+
+- During the update process, locked snapshots will be unloaded together with
+  other snapshots and their lock will be preserved. Therefore, such snapshots
+  won't be deleted by snapshot retention.
+- Upgrade to `v6.5` may break custom SSO integrations and will require a change
+  to the `/etc/ipf-dex.yaml` file. Since `6.3.2` release, we are omitting minor
+  API version for SSO configuration and only major version will need to be
+  changed with the next major IP Fabric version. Simply replace the `vX.Y` in
+  this file with `v6` and then run `systemctl restart ipf-dex`.
+
+  ```yaml
+  staticClients:
+    - id: ipfabric
+      redirectURIs:
+        - "https://demo1.eu.ipfabric.io/api/vX/auth/external/azure"
+  ```
+
+  For more information, please refer to the
+  [SSO documentation](../../IP_Fabric_Settings/administration/sso.md#sso-configuration-ipf-dexyaml).
+  If you would like assistance please contact your Solution Architect.
+
 ## v6.5.1 (GA, November 14th, 2023)
 
 ```
