--- a/docs/releases/release_notes/6.5.md
+++ b/docs/releases/release_notes/6.5.md
@@ -30,7 +30,7 @@ description: In this section, you can find the release notes for v6.5 releases.
   [SSO documentation](../../IP_Fabric_Settings/administration/sso.md#sso-configuration-ipf-dexyaml).
   If you would like assistance please contact your Solution Architect.
 
-## v6.5.1 (GA, November 14th, 2023)
+## v6.5.1 (November 14th, 2023)
 
 ```
 SHA256 (ipfabric-update-6-5-1+0.tar.gz.sig) = 8820b67b4931a0de27e39ec60785ba7821819c894a4e402b6155ca
